@@ -1,5 +1,6 @@
 1.2.4
  * Fix mixing prepared statements between keyspaces (CASSANDRA-5352)
+ * Fix consistency level during bootstrap - strike 3 (CASSANDRA-5354)
 
 1.2.3
  * add check for sstable overlap within a level on startup (CASSANDRA-5327)
